--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Your App</title>
     <!-- Common scripts for the entire application -->
     <!-- Confirmed Working Scripts -->
-    <script src="src/scripts/aframe.min.js"></script>
-    <script src="src/scripts/aframe-ar.js"></script>
-    <script src="src/scripts/aframe-troika-text.js"></script>
+    <script src="src/scripts/aframe.min.js" type="module"></script>
+    <script src="src/scripts/aframe-ar.js" type="module"></script>
+    <script src="src/scripts/aframe-troika-text.js" type="module"></script>
 
     <!-- Custom Scripts -->
     <script src="src/scripts/events.js" type="module"></script>
