--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Your App</title>
     <!-- Common scripts for the entire application -->
     <!-- Confirmed Working Scripts -->
+    <script data-main="src/scripts/main.js" src="src/scripts/require.js"></script>
     <script src="src/scripts/aframe.min.js" type="module"></script>
     <script src="src/scripts/aframe-ar.js" type="module"></script>
     <script src="src/scripts/aframe-troika-text.js" type="module"></script>
